Fix some layout issues for mobile, hide settings

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -21,10 +21,7 @@
     overflow: auto;
     width: 100%;
     .setting-container > .asset-index-card {
-        margin: 0 0.25em;
-    }
-    > .trading-times-card {
-        margin: 0 0.25em;
+        padding: 0 0.25em;
     }
     .trade-panel {
         flex-direction: column;
